# cclink

./: Cargo.toml  README.md  cclink-prd.md  install.sh
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-foundation-and-key-management/: 01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-crypto-and-transport/: 02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-core-commands/: 03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  (+3 more)
.planning/phases/01-foundation-and-key-management/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-crypto-and-transport/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-core-commands/: 03-01-PLAN.md  03-01-SUMMARY.md  03-04-SUMMARY.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-advanced-encryption-and-management/: 04-VERIFICATION.md
.planning/phases/05-release-and-distribution/: 05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-signed-record-format/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-code-quality-and-transport/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-cli-fixes-and-documentation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-pin-protected-handoffs/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-UAT.md  09-VERIFICATION.md
.planning/phases/10-pubky-homeserver-transport-fix/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-prerequisites/: 11-VERIFICATION.md
.planning/phases/12-ci-hardening/: 12-01-SUMMARY.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-code-quality-and-security/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/14-memory-zeroization/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-VERIFICATION.md
.planning/phases/15-encrypted-key-crypto-layer/: 15-01-PLAN.md  15-RESEARCH.md
.planning/phases/16-encrypted-key-storage-cli-integration/: 16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-RESEARCH.md  16-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: cli.rs  error.rs  lib.rs  main.rs  util.rs
src/commands/: init.rs  list.rs  mod.rs  pickup.rs  publish.rs  revoke.rs  whoami.rs
src/crypto/: mod.rs
src/keys/: fingerprint.rs  store.rs
src/record/: mod.rs
src/session/: mod.rs
src/transport/: mod.rs
tests/: integration_round_trip.rs  plaintext_leak.rs
(+22 files in other folders)
