[package]
name = "cclink"
version = "0.1.0"
edition = "2021"
description = "Secure session handoff between devices via PKARR DHT"
license = "MIT"
repository = "https://github.com/johnzilla/cclink"
homepage = "https://github.com/johnzilla/cclink"
readme = "README.md"
keywords = ["session", "handoff", "encryption", "pubky", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "cclink"
path = "src/main.rs"

[dependencies]
pkarr = { version = "5.0.3", default-features = false, features = ["dht"] }
# pkarr 5.0.3 requires ed25519-dalek 3.x pre-release; no stable 3.x exists yet.
# This exact pin must remain until pkarr publishes a release depending on a stable ed25519-dalek 3.x.
ed25519-dalek = "=3.0.0-pre.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5"
arboard = "3.6"
age = "0.11"
bech32 = "0.9"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gethostname = "0.5"
owo-colors = { version = "4", features = ["supports-colors"] }
dialoguer = "0.12"
qr2term = "0.3"
backon = "1.6"
comfy-table = "7.2.2"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
